dynamic popup content - beta

--- a/Web.Statu/Views/Home/Tmp.cshtml
+++ b/Web.Statu/Views/Home/Tmp.cshtml
@@ -19,73 +19,8 @@
     </div>
 </div>
 
+@Util.DynamicModal("/api/v1/modalclassification/234234")
 
-
-
-<div class="row">
-    <div class="col-xs-12 verticaltab-container">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 verticaltab-menu">
-            <div class="list-group">
-                <a href="#" class="list-group-item active">
-                    Flight
-                </a>
-                <a href="#" class="list-group-item">
-                    Train
-                </a>
-                <a href="#" class="list-group-item">
-                    Hotel
-                </a>
-                <a href="#" class="list-group-item">
-                    Restaurant
-                </a>
-                <a href="#" class="list-group-item ">
-                    Credit Card
-                </a>
-            </div>
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 verticaltab">
-            <!-- flight section -->
-            <div class="verticaltab-content active">
-                <center>
-                    <h1 class="glyphicon glyphicon-plane" style="font-size:14em;color:#55518a"></h1>
-                    <h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>
-                    <h3 style="margin-top: 0;color:#55518a">Flight Reservation</h3>
-                </center>
-            </div>
-            <!-- train section -->
-            <div class="verticaltab-content">
-                <center>
-                    <h1 class="glyphicon glyphicon-road" style="font-size:12em;color:#55518a"></h1>
-                    <h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>
-                    <h3 style="margin-top: 0;color:#55518a">Train Reservation</h3>
-                </center>
-            </div>
-
-            <!-- hotel search -->
-            <div class="verticaltab-content">
-                <center>
-                    <h1 class="glyphicon glyphicon-home" style="font-size:12em;color:#55518a"></h1>
-                    <h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>
-                    <h3 style="margin-top: 0;color:#55518a">Hotel Directory</h3>
-                </center>
-            </div>
-            <div class="verticaltab-content">
-                <center>
-                    <h1 class="glyphicon glyphicon-cutlery" style="font-size:12em;color:#55518a"></h1>
-                    <h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>
-                    <h3 style="margin-top: 0;color:#55518a">Restaurant Diirectory</h3>
-                </center>
-            </div>
-            <div class="verticaltab-content">
-                <center>
-                    <h1 class="glyphicon glyphicon-credit-card" style="font-size:12em;color:#55518a"></h1>
-                    <h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>
-                    <h3 style="margin-top: 0;color:#55518a">Credit Card</h3>
-                </center>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 <div class="clearfix"></div>
