--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -70,14 +70,14 @@
 }
 
 @helper HideFundingInFooter()
-    {
-string s = @"
+{
+    string s = @"
 <style>
-    #fundingAdFooter { display: none; }
+#fundingAdFooter { display: none; }
 </style>
 ";
-    @Html.Raw(s);
-    }
+@Html.Raw(s);
+}
 
 @helper AddVisitImg(string path)
 {
@@ -242,6 +242,39 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
         </a>
 
     </span>
+}
+
+@helper DynamicModal(string dynamicContentRelUrl)
+{
+if (!dynamicContentRelUrl.EndsWith("&"))
+{
+    if (dynamicContentRelUrl.Contains("?"))
+    {
+        dynamicContentRelUrl += "&";
+    }
+    else
+    {
+        dynamicContentRelUrl += "?";
+    }
+}
+string modalId = Devmasters.Core.TextUtil.GenRandomString(10);
+    <a href="#" data-toggle="modal" id="btn@(modalId)" data-target="#@(modalId)Form" data-remote="false" class="btn btn-link">
+        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Opravit
+    </a>
+    <div class="modal fade" id="@(modalId)Form" tabindex="-1" role="dialog" aria-labelledby="@(modalId)Title" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" id="@(modalId)content">
+            </div>
+        </div>
+    </div>
+    <script>
+        $('#btn@(modalId)').on('click', function () {
+            $('#@(modalId)content').html('<div class="loader2">Nahrávám formulář</div>');
+            $('#@(modalId)content').load('@(dynamicContentRelUrl)modalId=@(modalId)', function () {
+                $('#@(modalId)Form').modal({ show: true });
+            });
+        });
+    </script>
 }
 
 @helper AddReview(string itemType, string link)
@@ -485,8 +518,8 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
 }
 
 @helper AddWatchDogSmall(System.Security.Principal.IPrincipal user, string query, Type dataType, string btnText = null,
-        string preBtnText = null, string postBtnText = null, string prefillWDname = "",
-        bool showWDList = true, string datasetId = null, string btnCss = null)
+                    string preBtnText = null, string postBtnText = null, string prefillWDname = "",
+                    bool showWDList = true, string datasetId = null, string btnCss = null)
 {
     @AddWatchDog(user, query, dataType, btnText, preBtnText ?? "", postBtnText ?? "", prefillWDname, showWDList, datasetId, true, btnCss ?? "btn btn-warning btn-sm")
 }
@@ -701,8 +734,8 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
                         </div>
                         <div class="modal-footer">
                             <button type="button" onclick="ga('send', 'event', 'btnWatchDog', 'CloseForm', 'anonym');" class="btn btn-default" data-dismiss="modal">Zavřít</button>
-                            <a  onclick="ga('send', 'event', 'registerBtn', 'click','@CurrPageUrlPath'); return true;" href="/account/register?nextUrl=@(System.Net.WebUtility.UrlEncode(CurrentPage.Request.Url.PathAndQuery))" onclick="ga('send', 'event', 'btnWatchDog', 'Register', 'anonym');" role="button" class="btn btn-primary">Zdarma zaregistrovat</a>
-                            <a  onclick="ga('send', 'event', 'registerBtn', 'click','@CurrPageUrlPath'); return true;" href="/account/login?returnUrl=@(System.Net.WebUtility.UrlEncode(CurrentPage.Request.Url.PathAndQuery))" onclick="ga('send', 'event', 'btnWatchDog', 'Login', 'anonym');" role="button" class="btn btn-success">Přihlásit se</a>
+                            <a onclick="ga('send', 'event', 'registerBtn', 'click','@CurrPageUrlPath'); return true;" href="/account/register?nextUrl=@(System.Net.WebUtility.UrlEncode(CurrentPage.Request.Url.PathAndQuery))" onclick="ga('send', 'event', 'btnWatchDog', 'Register', 'anonym');" role="button" class="btn btn-primary">Zdarma zaregistrovat</a>
+                            <a onclick="ga('send', 'event', 'registerBtn', 'click','@CurrPageUrlPath'); return true;" href="/account/login?returnUrl=@(System.Net.WebUtility.UrlEncode(CurrentPage.Request.Url.PathAndQuery))" onclick="ga('send', 'event', 'btnWatchDog', 'Login', 'anonym');" role="button" class="btn btn-success">Přihlásit se</a>
                         </div>
                     </div>
                 </div>
@@ -1049,8 +1082,8 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
 
 
 @helper ExportButton(System.Security.Principal.IPrincipal user, string typ, string q,
-        string order = "0", string title = "Export výsledků hledání",
-        string style = "", string moreParams = "", string gaPageEventId = null)
+                    string order = "0", string title = "Export výsledků hledání",
+                    string style = "", string moreParams = "", string gaPageEventId = null)
 {
     if (gaPageEventId == null)
     {
@@ -1082,7 +1115,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
                     {
                         <p>
                             <a role="button" class="btn btn-primary btn-sm" target="_blank"
-                                onclick="ga('send', 'event', 'exportBtn', 'export','@gaPageEventId'); return true;" 
+                               onclick="ga('send', 'event', 'exportBtn', 'export','@gaPageEventId'); return true;"
                                href="/manage/exportresult/@(typ)?q=@(System.Net.WebUtility.UrlEncode(q))&h=@(HlidacStatu.Lib.ES.SearchTools.QueryHash(typ,q))&o=@(order)&ct=excel&@(moreParams)">
                                 Export do Excelu
                             </a>
@@ -1118,7 +1151,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
 
 
 @helper HorizontalTabs(IEnumerable<string> tabnames, IEnumerable<string> contents,
-    string containerCss = null, string gaPageEventId = null)
+                string containerCss = null, string gaPageEventId = null)
 {
     if (gaPageEventId == null)
     {
@@ -1166,7 +1199,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
 
 
 @helper VerticalTabs(IEnumerable<string> tabnames, IEnumerable<string> contents, string containerCss = null,
-    string tabColCss = null, string contentColCss = null, string gaPageEventId = null)
+                string tabColCss = null, string contentColCss = null, string gaPageEventId = null)
 {
     if (gaPageEventId == null)
     {
