--- a/Web.Statu/Views/Data/Manage.cshtml
+++ b/Web.Statu/Views/Data/Manage.cshtml
@@ -53,7 +53,8 @@
         </div>
         <div class="col-xs-12 col-sm-4">
             <a href="/data/Hledat/@Model.datasetId?q=*&order=DbCreated+desc" class="btn btn-default">
-            <i class="far fa-list"></i> Vypsat poslední záznamy</a>
+                <i class="far fa-list"></i> Vypsat poslední záznamy
+            </a>
             <p class="text-info">
                 Vypsání naposledy vložených záznamů
             </p>
@@ -77,9 +78,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-4">
-            <a href="/data/backup/@Model.id" class="btn btn-warning"><i class="far fa-file-download"></i> Zálohovat param. datasetu</a>
+            <a href="/data/backup/@Model.id" class="btn btn-warning"><i class="far fa-file-download"></i> Zálohovat nastavení datasetu</a>
             <p class="text-info">
-                Stáhnutí zálohu parametrů datasetu. <span class="text-danger">POZOR! záloha obsahuje pouze parametry datasetu, nikoliv data. Data můžete stáhnout přes API</span>
+                Stáhnutí zálohy nastavení datasetu. <span class="text-danger">POZOR! záloha obsahuje pouze parametry datasetu, nikoliv data. Data můžete stáhnout přes API</span>
             </p>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -97,15 +98,26 @@
     <div class="col-xs-12">
         <h3>Vytvoření nového datasetu</h3>
     </div>
-    <div class="col-xs-12 col-sm-4">
-        <h4>Pro "normální" lidi <i class="far fa-smile-wink"></i></h4>
+    <div class="col-xs-12 col-sm-6">
+        <h4>Snadný způsob pro netechnické lidi <i class="far fa-smile-wink"></i></h4>
         <a href="/data/createSimple" class="btn btn-primary"><i class="far fa-file-csv"></i> Vytvořit pomocí Excelu/CSV...</a>
         <p>
             Postup pro netechnické uživatele. Využijte tento postup, pokud máte jednoduchou strukturu dat (typicky Excel, CSV soubor) a neumíte sestavit JSON Schema
         </p>
 
     </div>
-    <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-6">
+        <h4>Obnova ze zálohy nastavení datasetu</h4>
+        <a href="/data/createFromBackup" class="btn btn-primary"><i class="far fa-file-csv"></i> Vytvořit pomocí ze zálohy nastavení datasetu</a>
+        <p>
+            Postup pro netechnické uživatele. Využijte tento postup, pokud jste si stáhli zálohu nastavení datasetu.
+        </p>
+
+    </div>
+    <div class="col-xs-12 col-sm-12">
+        <hr />
+    </div>
+    <div class="col-xs-12 col-sm-6">
         <h4>Pro pokročilé</h4>
         <a href="/data/createAdv" class="btn btn-primary"><i class="far fa-layer-plus"></i> Vytvořit s JSON Schema</a>
         <p>
@@ -113,7 +125,7 @@
             a dokážou ji popsat jako JSON Schema dle <a href="https://hlidacstatu.docs.apiary.io/">dokumentace</a>.
         </p>
     </div>
-    <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-6">
         <h4>Pro vývojáře</h4>
         <a href="/api" class="btn btn-primary"><i class="far fa-file-code"></i> Vytvořit přes API</a>
         <p>
