--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
                 <p>
                     Informace o politicích, sponzorech a osobách spjatých s politiky
                     <br>
-                    <strong>@RenderData.NiceNumber(HlidacStatu.Lib.StaticData.Politici.Get().Count)</strong> osob v databázi
+                    <strong>@RenderData.NiceNumber(HlidacStatu.Lib.StaticData.PolitickyAktivni.Get().Count)</strong> osob v databázi
                 </p>
             </div>
 
