--- a/Web.Statu/Views/Home/Reports/8_TopPrijmyProPolitiky.cshtml
+++ b/Web.Statu/Views/Home/Reports/8_TopPrijmyProPolitiky.cshtml
@@ -78,7 +78,7 @@
         .Take(100)
         .Select(kv => new
         {
-            politik = HlidacStatu.Lib.StaticData.Politici
+            politik = HlidacStatu.Lib.StaticData.PolitickyAktivni
                                     .Get()
                                     .Where(m => m.InternalId == kv.Key)
                                     .FirstOrDefault(),
