--- a/Web.Statu/Views/Home/Subjekt_Profile2.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile2.cshtml
@@ -507,7 +507,7 @@ $"{Model.Jmeno}: {Devmasters.Core.TextUtil.RemoveHTML((string)ViewBag.statDescri
                     <td>
                         @foreach (var pId in HlidacStatu.Lib.StaticData.FirmySVazbamiNaPolitiky_nedavne_Cache.Get().SoukromeFirmy[Model.ICO])
                         {
-                            HlidacStatu.Lib.Data.Osoba p = HlidacStatu.Lib.StaticData.Politici
+                            HlidacStatu.Lib.Data.Osoba p = HlidacStatu.Lib.StaticData.PolitickyAktivni
                             .Get()
                             .Where(m => m.InternalId == pId)
                             .FirstOrDefault();
