--- a/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
+++ b/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
@@ -20,7 +20,7 @@
 
 
     List<HlidacStatu.Lib.Data.Osoba> showList = null;
-    showList = HlidacStatu.Lib.StaticData.Politici.Get()
+    showList = HlidacStatu.Lib.StaticData.PolitickyAktivni.Get()
         .Where(p => allNames.Contains(p.NameId))
         .OrderBy(m => m.Prijmeni)
         .ThenBy(m => m.Jmeno)
