--- a/Web.Statu/Views/Home/Reports/19_PoradciVlady.cshtml
+++ b/Web.Statu/Views/Home/Reports/19_PoradciVlady.cshtml
@@ -34,7 +34,7 @@
             };
 
     List<HlidacStatu.Lib.Data.Osoba> showList = null;
-    showList = HlidacStatu.Lib.StaticData.Politici.Get()
+    showList = HlidacStatu.Lib.StaticData.PolitickyAktivni.Get()
         .Where(p => uradVladyNames.Contains(p.NameId))
         .OrderBy(m => m.Prijmeni)
         .ThenBy(m => m.Jmeno)
