--- a/Web.Statu/Views/Home/Subjekt_Stat.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Stat.cshtml
@@ -72,7 +72,7 @@
                             {
                                 sb.AppendLine("<br/>Osoby:");
                                 var p = HlidacStatu.Lib.StaticData.FirmySVazbamiNaPolitiky_nedavne_Cache.Get().SoukromeFirmy[f.Item]
-                                            .Select(pid => HlidacStatu.Lib.StaticData.Politici
+                                            .Select(pid => HlidacStatu.Lib.StaticData.PolitickyAktivni
                                                 .Get()
                                                 .Where(m => m.InternalId == pid)
                                                 .FirstOrDefault())
