--- a/Web.Statu/Views/Insolvence/_PeopleList.cshtml
+++ b/Web.Statu/Views/Insolvence/_PeopleList.cshtml
@@ -73,7 +73,7 @@
 
 		var vazby = new List<int>();
 		StaticData.FirmySVazbamiNaPolitiky_vsechny_Cache.Get().SoukromeFirmy.TryGetValue(ico, out vazby);
-		var politici = vazby == null ? new List<G.Osoba>() : StaticData.Politici.Get()?.Where(p => vazby.Contains(p.InternalId)) ?? new List<G.Osoba>();
+		var politici = vazby == null ? new List<G.Osoba>() : StaticData.PolitickyAktivni.Get()?.Where(p => vazby.Contains(p.InternalId)) ?? new List<G.Osoba>();
 		var maji = HlidacStatu.Util.PluralForm.Get(politici.Count(), "má;mají;mají");
 		var provazaniPolitici = politici.Any() ? $"<br /> - {string.Join(", ", politici.Select(p => $"<a href='/osoba/{p.NameId}'>{p.FullName()}</a>"))} {maji} vazby na tuto firmu." : "";
 
