--- a/Web.Statu/Views/Home/Subjekt_Profile2.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile2.cshtml
@@ -552,7 +552,7 @@ $"{Model.Jmeno}: {Devmasters.Core.TextUtil.RemoveHTML((string)ViewBag.statDescri
                 </tr>
             }
             @{
-                var queries = HlidacStatu.Lib.Data.External.DataSets.Search.GetSpecificQueriesForDatasets("ICO", Model.ICO);
+                var queries = HlidacStatu.Lib.Data.External.DataSets.Search.GetSpecificQueriesForDatasets("ICO", Model.ICO,true);
 
                 var dsSearch = HlidacStatu.Lib.Data.Search.DatasetMultiQueryMultiResult.GeneralSearch(queries,1,5);
                 if (dsSearch.IsValid && dsSearch.Total > 0)
