--- a/Web.Statu/Views/Data/Dataset.cshtml
+++ b/Web.Statu/Views/Data/Dataset.cshtml
@@ -24,7 +24,9 @@
     <style>
         #data-detail-content pre {
             white-space: pre-wrap !important;
-            font-size: 80%
+            font-size: 85%;
+            word-break: break-word;
+            line-height: 1.6em;
         }
     </style>
 }
