--- a/Web.Statu/Views/Data/Edit.cshtml
+++ b/Web.Statu/Views/Data/Edit.cshtml
@@ -187,6 +187,8 @@
     static string regexval = "(<[^>]*>)|(\\s{1,}{{[^}]*}})";
     public string FormatHtml(string html)
     {
+        return html;
+
         //stupid Html Formatter
         //return html;
 
