--- a/Web.Statu/Views/Data/Dataset.cshtml
+++ b/Web.Statu/Views/Data/Dataset.cshtml
@@ -17,6 +17,12 @@
         || email == Model.Registration().createdBy
         );
 
+    var promoRoot = HlidacStatu.Lib.StaticData.Web_Root + "\\Views\\Data\\Promo\\";
+    string promoViewFileName = promoRoot + $"front_{reg.datasetId}.cshtml";
+    bool showPromo = System.IO.File.Exists(promoViewFileName);
+
+    string promoViewName = $"~/Views/Data/Promo/front_{reg.datasetId}.cshtml";
+
 
 }
 @section scripts
@@ -40,101 +46,96 @@
         <li class="active">@reg.name</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
     </ol>
-    }
-    <div id="data-detail-content">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <td colspan="2">
-                        <b>@reg.name</b>
-                        @if (!string.IsNullOrEmpty(reg.description))
-                        {
-                            <p>@reg.description</p>
-                        }
-                    </td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Hledání v datovém zdroji</td>
-                    <td>
-                        <form method="get" action="/data/Hledat/@Model.DatasetId" class="form-inline ">
-                            <div class="form-group form-group">
-                                <input type="text" class="form-control" id="q" name="q" placeholder="hledaný text">
-                            </div>
-                            <button type="submit" class="btn btn-default btn">Prohledat</button>
-                            <a href="/data/Hledat/@Model.DatasetId?q=*&order=DbCreated+desc" class="btn btn-default" style="margin-left:10px">Vypsat poslední záznamy</a>
-                        </form>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td>DatasetId</td>
-                    <td>@reg.datasetId</td>
-                </tr>
-                <tr>
-                    <td>Vytvořen</td>
-                    <td>@HlidacStatu.Lib.RenderTools.DateDiffShort(reg.created, DateTime.Now, "Datový zdroj byl založen před {0}.", "")</td>
-                </tr>
-                <tr>
-                    <td>Záznamy datového zdroje</td>
-                    @{
-                        var first = Model.SearchData("*", 1, 1, "DbCreated");
-                        var last = Model.SearchData("*", 1, 1, "DbCreated desc");
-                    }
-                    <td>
-                        <p>
-                            Datový zdroj @Devmasters.Core.Lang.Plural.GetWithZero((int)Model.SearchData("", 1, 0).Total
-, "neobsahuje žádný záznam", "obsahuje jeden záznam", "obsahuje {0} záznamy", "obsahuje {0} záznamů")
-                        </p>
-                        @if (first.Total > 0)
-                        {
-                            <p>
-                                Nejstarší záznam byl vložen @(Devmasters.Core.DateTimeUtil.Ago((DateTime)first.Result.First().DbCreated, HlidacStatu.Util.Consts.csCulture).ToLower())
-                                , nejnovější @(Devmasters.Core.DateTimeUtil.Ago((DateTime)last.Result.First().DbCreated, HlidacStatu.Util.Consts.csCulture).ToLower()).
-                            </p>
-                        }
-                    </td>
-                </tr>
-                <tr>
-                    <td>Testovací (beta) provoz</td>
-                    <td>@Util.IfExists(reg.betaversion, "Ano", "Ne")</td>
-                </tr>
-                <tr>
-                    <td>Kontaktovat autora</td>
-                    <td>
-                        @Util.FeedbackModal("Poslat autorovi zprávu", null, null, null,
-                            new string[]{ "Chyba","Chci upozornit na chybu",
-                        "Stiznost","Chci si stěžovat",
-                        "Pochvala","Chci vás pochválit",
-                        "NabidkaPomoci","Nabízím vám pomoc",
-                        "Jiné","Jiné",
-                        }, true, "dataset|" + @Model.DatasetId)
-
-
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <a href="/data/TechnickeInfo/@Model.DatasetId" class="btn btn-default">Technické detaily</a>
-                        @if (showEditBtn)
-                        {
-                            <a href="/data/Manage/@Model.DatasetId" class="btn btn-warning" style="margin-left:10px"><i class="far fa-edit"></i> Editovat nastavení datasetu</a>
-                        }
-                    </td>
-                </tr>
-                @if (Model.DatasetId == "stav-mostu")
-                {
+}
+<div id="data-detail-content">
+    <div class="row">
+        <div class="col-xs-12">
+            @if (showPromo)
+            {
+                @Html.Action("CachedAction_Child_20min", new { model = (object)reg.datasetId, NameOfView = promoViewName, key = promoViewFileName })
+            }
+            else
+            {
+                <h3>@reg.name</h3>
+                <p>@reg.description</p>
+            }
+            <table class="table table-hover">
+                <tbody>                    
                     <tr>
-                        <td colspan="2">
-                            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1q2tP7lpTxs1AxzG1NO6a6-HYxl0jmqQq" width="800" height="600"></iframe>
+                        <td>Hledání v datovém zdroji</td>
+                        <td>
+                            <form method="get" action="/data/Hledat/@Model.DatasetId" class="form-inline ">
+                                <div class="form-group form-group">
+                                    <input type="text" class="form-control" id="q" name="q" placeholder="hledaný text">
+                                </div>
+                                <button type="submit" class="btn btn-default btn">Prohledat</button>
+                                <a href="/data/Hledat/@Model.DatasetId?q=*&order=DbCreated+desc" class="btn btn-default" style="margin-left:10px">Vypsat poslední záznamy</a>
+                            </form>
+
                         </td>
                     </tr>
-                }
+                    <tr>
+                        <td>DatasetId</td>
+                        <td>@reg.datasetId</td>
+                    </tr>
+                    <tr>
+                        <td>Vytvořen</td>
+                        <td>@HlidacStatu.Lib.RenderTools.DateDiffShort(reg.created, DateTime.Now, "Datový zdroj byl založen před {0}.", "")</td>
+                    </tr>
+                    <tr>
+                        <td>Záznamy datového zdroje</td>
+                        @{
+                            var first = Model.SearchData("*", 1, 1, "DbCreated");
+                            var last = Model.SearchData("*", 1, 1, "DbCreated desc");
+                        }
+                        <td>
+                            <p>
+                                Datový zdroj @Devmasters.Core.Lang.Plural.GetWithZero((int)Model.SearchData("", 1, 0).Total
+, "neobsahuje žádný záznam", "obsahuje jeden záznam", "obsahuje {0} záznamy", "obsahuje {0} záznamů")
+                            </p>
+                            @if (first.Total > 0)
+                            {
+                                <p>
+                                    Nejstarší záznam byl vložen @(Devmasters.Core.DateTimeUtil.Ago((DateTime)first.Result.First().DbCreated, HlidacStatu.Util.Consts.csCulture).ToLower())
+                                    , nejnovější @(Devmasters.Core.DateTimeUtil.Ago((DateTime)last.Result.First().DbCreated, HlidacStatu.Util.Consts.csCulture).ToLower()).
+                                </p>
+                            }
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Testovací (beta) provoz</td>
+                        <td>@Util.IfExists(reg.betaversion, "Ano", "Ne")</td>
+                    </tr>
+                    <tr>
+                        <td>Kontaktovat autora</td>
+                        <td>
+                            @Util.FeedbackModal("Poslat autorovi zprávu", null, null, null,
+                                new string[]{ "Chyba","Chci upozornit na chybu",
+                            "Stiznost","Chci si stěžovat",
+                            "Pochvala","Chci vás pochválit",
+                            "NabidkaPomoci","Nabízím vám pomoc",
+                            "Jiné","Jiné",
+                            }, true, "dataset|" + @Model.DatasetId)
 
-            </tbody>
-        </table>
 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <a href="/data/TechnickeInfo/@Model.DatasetId" class="btn btn-default">Technické detaily</a>
+                            @if (showEditBtn)
+                            {
+                                <a href="/data/Manage/@Model.DatasetId" class="btn btn-warning" style="margin-left:10px"><i class="far fa-edit"></i> Editovat nastavení datasetu</a>
+                            }
+                        </td>
+                    </tr>
+
+
+                </tbody>
+            </table>
+        </div>
     </div>
 
-    @Html.Partial("_new")
+</div>
+
+@Html.Partial("_new")
