--- a/Web.Statu/Views/Data/Hledat.cshtml
+++ b/Web.Statu/Views/Data/Hledat.cshtml
@@ -7,7 +7,7 @@
 
 @{
     var registration = Model.DataSet.Registration();
-    ViewBag.Title = "Hlídač Smluv: " + registration.name;
+    ViewBag.Title = registration.name;
     ViewBag.SubTitle = Model?.Q;
 
 
