--- a/Web.Statu/Views/Data/_data_hledat_properties.cshtml
+++ b/Web.Statu/Views/Data/_data_hledat_properties.cshtml
@@ -7,7 +7,7 @@
 @using Newtonsoft.Json.Linq;
 
 @{
-    ViewBag.Title = "Hlídač Smluv: Hledání ";
+    ViewBag.Title = "Hledání ";
     ViewBag.SubTitle = Model?.Q;
 
 
