--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -70,8 +70,8 @@
                 <button class="header__search__btn">Hledat</button>
             </form>
             <div>
-                <a class="header__search__hint" href="/napoveda">
-                    Jak vyhledávat?
+                <a class="header__search__hint" style="font-size:15px;text-decoration:none" href="/napoveda">
+                    <i class="far fa-question-square" style=""></i> Nápověda jak vyhledávat
                 </a>
                 <a class="header__search__hint pull-right" style="padding-top:2px;" href="/snadnehledani">
                     Snadné hledání
