--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -325,10 +325,10 @@
                     <button class="header__search__btn">Hledat</button>
                 </form>
                 <div>
-                    <a class="header__search__hint" href="/napoveda">
-                        Jak vyhledávat? <sup style="color:yellow;text-decoration:none">vylepšeno</sup>
+                    <a class="header__search__hint" style="padding-top:2px;font-size:15px;text-decoration:none;padding-top:2px;font-size:15px;text-decoration:none;" href="/napoveda">
+                        <i class="far fa-question-square" style=""></i> Nápověda jak vyhledávat
                     </a>
-                    <a class="header__search__hint pull-right" style="padding-top:2px;" href="/snadnehledani">
+                    <a class="header__search__hint pull-right" style="" href="/snadnehledani">
                         Snadné hledání
                     </a>
                 </div>
