--- a/Web.Statu/Views/Dotace/Detail.cshtml
+++ b/Web.Statu/Views/Dotace/Detail.cshtml
@@ -74,6 +74,10 @@
             <th>Název grantového schematu</th>
             <td>@Model.GrantoveSchemaNazev</td>
         </tr>
+        <tr>
+            <th>Zdroj</th>
+            <td><a href="@Model.Source">@Model.Source</a></td>
+        </tr>
     </tbody>
 </table>
 
