Rozšíření ukázky hledání

--- a/Web.Statu/Views/Dotace/Index.cshtml
+++ b/Web.Statu/Views/Dotace/Index.cshtml
@@ -77,15 +77,15 @@
 <h2>Ukázky možností</h2>
 <ul>
     <li>
-        <a href="/dotace/hledat?Q=ico:00190489">Hledání podle IČO</a>
+        Hledání podle IČO - <a href="/dotace/hledat?Q=ico:00190489">Nemocnice pardubice</a>, <a href="/dotace/hledat?Q=ico:70994234">SŽDC</a>
     </li>
     <li>
-        <a href="/dotace/hledat?Q=jmeno:'Ředitelství silnic a dálnic ČR'">Hledání podle jména</a>
+        Hledání podle příjemce - <a href="/dotace/hledat?Q=jmeno:'Ředitelství silnic a dálnic ČR'">ŘSD</a>, <a href="/dotace/hledat?Q=jmeno:univerzita">Univerzita</a>
     </li>
     <li>
-        <a href="/dotace/hledat?Q=osobaid:andrej-babis">Hledání podle osoby</a>
+        Hledání podle osoby - <a href="/dotace/hledat?Q=osobaid:andrej-babis">Andrej Babiš</a>, <a href="/dotace/hledat?Q=osobaid:zdenek-bakala-2">Zdeněk Bakala</a>
     </li>
-    
+
 </ul>
 
 
