--- a/Web.Statu/Views/Manage/Index.cshtml
+++ b/Web.Statu/Views/Manage/Index.cshtml
@@ -117,7 +117,7 @@
                         Hledat mezi vsemi osobami
                     </dt>
                     <dd>
-                        <form action="/manage/hledejosoby" method="get" class="form-inline">
+                        <form action="/manage/findperson" method="get" class="form-inline">
                             <div class="form-group">
                                 <label for="jmeno">Jmeno</label>
                                 <input type="text" class="form-control" id="jmeno" name="jmeno" placeholder="Jmeno">
