--- a/Web.Statu/Views/Data/Promo/front_vyjadreni-politiku.cshtml
+++ b/Web.Statu/Views/Data/Promo/front_vyjadreni-politiku.cshtml
@@ -61,7 +61,12 @@
                 .ToDictionary(k => k.key, v => v.num);
 
 }
-<p>@reg.description</p>
+    <p>
+        Komentáře a vyjádření politiků na sociálních sítích a dalších zdrojích.
+
+        Vzniklo za pomoci skvělého <a href=""><img src="~/Content/Img/apify-logo.png" style="height:40px;width:auto"/></a>. Díky <i class="fas fa-heart" style="font-size:20px;color:red"></i>
+    </p>
+<hr />
 <div class="row">
     <div class="col-xs-12">
 
