--- a/Web.Statu/Views/Data/Promo/front_vyjadreni-politiku.cshtml
+++ b/Web.Statu/Views/Data/Promo/front_vyjadreni-politiku.cshtml
@@ -64,7 +64,9 @@
     <p>
         Komentáře a vyjádření politiků na sociálních sítích a dalších zdrojích.
 
-        Vzniklo za pomoci skvělého <a href=""><img src="~/Content/Img/apify-logo.png" style="height:40px;width:auto"/></a>. Díky <i class="fas fa-heart" style="font-size:20px;color:red"></i>
+        Vzniklo za pomoci skvělého 
+        <a href="https://www.apify.com" target="_blank" onclick="return trackOutLink(this,'vyroky-politiku');">
+        <img src="~/Content/Img/apify-logo.png" style="height:40px;width:auto"/></a>. Díky <i class="fas fa-heart" style="font-size:20px;color:red"></i>
     </p>
 <hr />
 <div class="row">
