--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -189,7 +189,7 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
     var merkIco = HlidacStatu.Util.ParseTools.IcoToMerkIco(ico);
 
     string firmoLink = string.Format("http://www.firmo.cz/cs/osoba/{0}?apc=4801", ico);
-    string merkLink = string.Format("https://www.detail.cz/firma/cz-{0}", merkIco);
+    string merkLink = "https://www.merk.cz/";
     string linkT = "<a href='{0}' onclick=\"return trackOutLink(this,'Detail');\">&nbsp;<img height='27' src='/Content/Img/{1}' /></a>";
     string textT = "více na {0}";
 
