--- a/Web.Statu/Views/Data/DetailText.cshtml
+++ b/Web.Statu/Views/Data/DetailText.cshtml
@@ -43,7 +43,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Databáze</a></li>
+        <li><a href="/data">Další databáze</a></li>
         <li><a href="@Model.Dataset.DatasetUrl()">@Model.Dataset.Registration().name</a></li>
         <li><a href="https://www.hlidacstatu.cz/data/Detail/@Model.Dataset.Registration().datasetId/@ViewBag.Id">@ViewBag.Id</a></li>
         <li class="active">Obsah dokumentu</li>
