--- a/Web.Statu/Views/Data/Edit.cshtml
+++ b/Web.Statu/Views/Data/Edit.cshtml
@@ -37,7 +37,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Databáze</a></li>
+        <li><a href="/data">Další databáze</a></li>
         <li><a href="@dataset.DatasetUrl()">@Model.name</a></li>
         <li class="active">Editace parametrů</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
