--- a/Web.Statu/Views/Data/CreateSimple.cshtml
+++ b/Web.Statu/Views/Data/CreateSimple.cshtml
@@ -23,7 +23,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Databáze</a></li>
+        <li><a href="/data">Další databáze</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
 }
