--- a/Web.Statu/Views/Data/DatasetTextJson.cshtml
+++ b/Web.Statu/Views/Data/DatasetTextJson.cshtml
@@ -73,7 +73,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Databáze</a></li>
+        <li><a href="/data">Další databáze</a></li>
         <li class="active">@reg.name</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
     </ol>
