--- a/Web.Statu/Views/Data/Hledat.cshtml
+++ b/Web.Statu/Views/Data/Hledat.cshtml
@@ -29,7 +29,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Databáze</a></li>
+        <li><a href="/data">Další databáze</a></li>
         <li><a href="@Model.DataSet.DatasetUrl()">@registration.name</a></li>
         <li class="active">@ViewBag.SubTitle</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
