--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -265,7 +265,7 @@
                 </li>
 
                 <!-- mobile menu items below -->
-                <li class="level2"><a href="/data">Databáze<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
+                <li class="level2"><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                 <li class="level2"><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:#777;">@(PocetReportu)</sup></a></li>
                 <li class="level2"><a href="/texty">Komentáře</a></li>
                 <li class="level2"><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
@@ -303,7 +303,7 @@
             <!-- desktop menu items only -->
             <div class="navbar__level2">
                 <ul>
-                    <li class=""><a href="/data">Databáze<sup style="top:0;text-decoration:none;color:yellow;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
+                    <li class=""><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:yellow;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                     <li class=""><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:yellow;">@(PocetReportu)</sup></a></li>
                     <li class=""><a href="/texty">Komentáře</a></li>
                     <li class=""><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
